force-app/main/default/objects/Portal_User_Profile__c/fields/Approval_Scope__c.field-meta.xml
<CustomField>
    <fullName>Approval_Scope__c</fullName>
    <label>Approval Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label
        >None</label></value>
            <value><fullName>Direct Reports</fullName><default
        >false</default><label>Direct Reports</label></value>
            <value><fullName>Department</fullName><default>false</default><label
        >Department</label></value>
            <value><fullName>All Employees</fullName><default
        >false</default><label>All Employees</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>