force-app/main/default/objects/Portal_User_Profile__c/fields/Default_Approval_Profile__c.field-meta.xml
<CustomField>
    <fullName>Default_Approval_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Approval Profile</label>
    <referenceTo>Portal_User_Profile__c</referenceTo>
    <relationshipLabel>Source Approval Profiles</relationshipLabel>
    <relationshipName>Source_Approval_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>