force-app/main/default/objects/Portal_User_Profile__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description
  >Business-facing profile name shown in administration screens.</description>
    <label>Display Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>