force-app/main/default/objects/Portal_User_Profile__c/fields/Profile_Type__c.field-meta.xml
<CustomField>
    <fullName>Profile_Type__c</fullName>
    <label>Profile Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Employee</fullName><default>true</default><label
        >Employee</label></value>
            <value><fullName>Manager</fullName><default>false</default><label
        >Manager</label></value>
            <value><fullName>HR Manager</fullName><default>false</default><label
        >HR Manager</label></value>
            <value><fullName>Recruiter</fullName><default>false</default><label
        >Recruiter</label></value>
            <value><fullName>Payroll Administrator</fullName><default
        >false</default><label>Payroll Administrator</label></value>
            <value><fullName>System Administrator</fullName><default
        >false</default><label>System Administrator</label></value>
            <value><fullName>Custom</fullName><default>false</default><label
        >Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>